<resources>
    <string name="app_name" translatable="false">Hymoji</string>
    <string name="home_admob_banner_id" translatable="false">ca-app-pub-7692699628033489/8854157312</string>
    <string name="mainemojis_admob_banner_id" translatable="false">ca-app-pub-7692699628033489/7701869504</string>
    <string name="packs_admob_banner_id" translatable="false">ca-app-pub-7692699628033489/7283707731</string>
    <string name="categories_admob_banner_id" translatable="false">ca-app-pub-7692699628033489/3410258942</string>
    <string name="admob_interstitial_id" translatable="false">ca-app-pub-7692699628033489/7714952571</string>
    <string name="home_title">Explore emojis</string>
    <string name="home_subtitle">Here you can explore our categories to access an unlimited collection of emojis</string>
    <string name="local_emojis_title">DOWNLOADED EMOJIS</string>
    <string name="download_success">Saved to downloads folder</string>
    <string name="pack_downloading_progress">Downloading pack emojis: </string>
    <string name="download_btn_txt">Download</string>
    <string name="pack_confirmation_sheet_title">Wait a second, there\'s more!</string>
    <string name="pack_confirmation_sheet_subtitle">Do you want me to download this pack as a ZIP file (suitable for Desktop or sharing) or simply download it as a folder?</string>
    <string name="pack_confirmation_sheet_btn1">Download as ZIP</string>
    <string name="pack_confirmation_sheet_btn2">Download as a folder</string>
    <string name="home_searchbox">Search…</string>
    <string name="home_sections_title">SECTIONS</string>
    <string name="home_dock1_title">All emojis</string>
    <string name="home_dock1_subtitle">emojis</string>
    <string name="home_dock2_title">Categories</string>
    <string name="home_dock2_subtitle">categories</string>
    <string name="home_dock3_title">Settings</string>
    <string name="home_dock3_subtitle">Manage Hymoji</string>
    <string name="home_dock4_subtitle">How to add emojis?</string>
    <string name="home_dock4_title">Help</string>
    <string name="home_packs_title">EMOJI PACKS</string>
    <string name="home_packs_seemore">SEE ALL</string>
    <string name="home_pack_seemore2">More packs</string>
    <string name="categories_screen_title">Explore categories</string>
    <string name="categories_screen_subtitle">Lazy to search? choose what suits your shiny server. Some categories are empty btw.</string>
    <string name="emojis_search_box_txt">For best results, search like a memer…</string>
    <string name="emojis_not_found">Oh boy, we couldn\'t find anything.</string>
    <string name="emojis_loading">One second, we\'re getting emojis…</string>
    <string name="packs_included_emojis">included\nemojis</string>
    <string name="animated_emojis_warning_title">Hold up, wait a minute!</string>
    <string name="animated_emojis_warning_subtitle">You\'re about to enter a category that contains flashing images that may potentially trigger seizures for people with photosensitive epilepsy.</string>
    <string name="animated_emojis_warning_btncancel">Nope, I\'m out</string>
    <string name="animated_emojis_warning_btnok">Let me in</string>
    <string name="welcome_continue">Continue</string>
    <string name="welcome_subtitle_0">Unlimited collection of Discord, Twitch, and Slack emojis</string>
    <string name="welcome_subtitle_1">Tired of boring emojis? Let me introduce myself…</string>
    <string name="welcome_title_2">Another dimension of emojis</string>
    <string name="welcome_subtitle_2">Memes, animations, faces, expressions, any emoji. We literally have them all.</string>
    <string name="welcome_title_3">Let\'s get started</string>
    <string name="welcome_subtitle_3">Let our journey begins now</string>
    <string name="sort_by_title">SORT BY</string>
    <string name="sort_by_newest">Newest</string>
    <string name="sort_by_oldest">Oldest</string>
    <string name="sort_by_alphabetically">Alphabetically</string>
    <string name="preview_pack_title">Preview pack</string>
    <string name="preview_pack_subtitle">You can see what emojis this pack contains and guess what? you can download them individually too!</string>
    <string name="preview_pack_download_btn">Download full pack</string>
    <string name="explore_packs_title">Explore packs</string>
    <string name="explore_packs_subtitle">Packs of different emojis of the same type</string>
    <string name="settings_subtitle">Manage and customize Hymoji app</string>
    <string name="settings_title">Settings</string>
    <string name="settings_section_1_title">GENERAL</string>
    <string name="settings_option_1_title">Reload emojis</string>
    <string name="settings_option_1_subtitle">You can get the latest emojis by swiping down the home screen.</string>
    <string name="settings_option_2_title">Upload emojis</string>
    <string name="settings_option_2_subtitle">You\'ll be redirected to emoji.gg to manually upload your emojis there. After approval, you may click \"Reload emojis\" above.</string>
    <string name="settings_option_3_title">Clear cache</string>
    <string name="settings_option_3_subtitle">All preloaded emojis will be erased. Less app size, more emojis loading time.</string>
    <string name="settings_option_4_title">Support</string>
    <string name="settings_option_4_subtitle">Before taking any action, please contact us first to settle everything down. Thanks.</string>
    <string name="settings_option_5_title">Feedback</string>
    <string name="settings_option_5_subtitle">Is something missing or you need a feature? let us know. Also, don\'t forget to give us a nice rating.</string>
    <string name="settings_option_6_subtitle">We are in no way affiliated with Discord, Slack, or Twitch. Hymoji wasn\'t created to compete with any other service.</string>
    <string name="settings_section_3_title">COPYRIGHT</string>
    <string name="settings_option_7_title">Content copyright</string>
    <string name="settings_option_7_subtitle">Emojis are user-submitted and are copyright of their respective owners. Click here if you have questions or copyright concerns.</string>
    <string name="settings_option_8_title">Content source</string>
    <string name="settings_option_8_subtitle">All emojis are provided by emoji.gg.</string>
    <string name="help_center_title">Help center</string>
    <string name="help_center_subtitle">Step-by-step instructions to add emojis to your own Discord, Twitch, or Slack server</string>
    <string name="welcome_start">Start</string>
    <string name="settings_option_10_title">Hymoji on Github</string>
    <string name="settings_option_10_subtitle">Feel free to check out Hymoji\'s source code on Github.</string>
    <string name="submitted_by">Submitted by: </string>
    <string name="downloading">Downloading…</string>
    <string name="full_download_path">"Download path: "</string>
    <string name="permission_denied_emojis">You can\'t download emojis without storage access permission. Please allow it.</string>
    <string name="permission_denied_packs">You can\'t download packs without storage access permission. Please allow it.</string>
    <string name="ask_for_permission">Please give us permission to access your storage to continue.</string>
    <string name="error_msg">Something went wrong.</string>
    <string name="error_msg_2">Something went wrong, please try again later.</string>
    <string name="cache_cleared_success">Cache has been cleared successfully.</string>
    <string name="emojis_reloaded_success">Done. Home page will be reloaded when you get back</string>
    <string name="packs_still_loading_msg">Please wait, we\'re getting categories…</string>
    <string name="emojis_still_loading_msg">Please wait, we\'re getting emojis…</string>
    <string name="settings_option_11_title">Language</string>
    <string name="settings_option_11_subtitle">Let Hymoji speak your language</string>
    <string name="settings_option_12_title">Help to translate Hymoji</string>
    <string name="settings_option_12_subtitle">Our mission is to make Hymoji accessible for all emoji lovers around the world. Help us in that mission.</string>
    <string name="news_notifications_channel">Hymoji\'s News</string>
    <string name="request_server_data_error">Something went wrong, we will restart the app to try again.</string>
    <string name="dialog_negative_text">Cancel</string>
    <string name="dialog_positive_text">Okay</string>
    <string name="mailto_device_not_supported">It seems like your device doesn\'t have a mail app installed, would you like to be redirected to Play Store to send us feedback or to contact us?</string>
    <string name="webview_device_not_supported">It seems like your device doesn\'t have a browser app installed, sorry we can\'t open the link. \n Would you like to copy the link to your clipboard?</string>
    <string name="copy_text">Copy</string>
    <string name="update_now_dialog_title">Update is ready</string>
    <string name="update_now_button">Install</string>
    <string name="new_update_downloaded">The new update is downloaded and ready to be installed. Please click on install to continue. It will not take more than a second to complete.</string>
    <string name="discord_title" translatable="false">Discord</string>
    <string name="settings_option_13_subtitle">Join our Discord server and meet new amazing friends. Don\'t be late, we\'re waiting for you.</string>
    <string name="pro_tip_1">You can get new emojis by swiping down this page, our community uploads new emojis every day.</string>
    <string name="downloading_sheet_msg">Emoji is being downloaded, check notifications for more information.</string>
    <string name="pro_tip_2">Join our Discord server and meet new amazing friends. The invite link on the settings page, Don\'t be late, we\'re waiting for you.</string>
    <string name="share_btn_txt">Share</string>
    <string name="share_main_text">Hey, I got this cool emoji from Hymoji app. Check it out, you\'ll definitely like it.</string>
    <string name="share_title">Share emoji via</string>
    <string name="emojis_tab1_title">Main emojis</string>
    <string name="emojis_tab2_title">Packs emojis</string>
    <string name="getting_ready_to_share">Getting ready for sharing…</string>
    <string name="failed_to_load_emojis">Failed to load emojis, please try again later.</string>
    <string name="settings_option_14_title">App theme</string>
    <string name="settings_option_14_subtitle">Your eyes should see emojis in their best look.</string>
    <string name="theme_dark_title">Dark mode</string>
    <string name="theme_light_title">Light mode</string>
    <string name="theme_auto_title">Follow system theme</string>
    <string name="contribute_go">Contribute now</string>
    <string name="contribute_desc">Huge thanks to everyone who contributed to translating Hymoji.</string>
    <string name="contribute_title">Translation Contributors</string>
    <string name="contrbute_contact_us">You\'ll be redirected to your mail app to contact us</string>
    <string name="payment_failed">Payment was cancelled, please try again.</string>
    <string name="no_internet_connection">Check your internet connection!</string>
    <string name="no_internet_connection_title">Hymoji lost connection</string>
    <string name="no_internet_connection_desc">It seems like we lost connection with the earth, help us bring our spaceship back by reloading emojis.</string>
    <string name="payments_powered_by">Payments are processed by PayPal</string>
    <string name="payment_leaving">Oh no, don\'t go :(</string>
    <string name="payment_success_title">Huge thanks to you!</string>
    <string name="payment_success_desc">You\'ve become one of the coolest users of Hymoji, we\'re so happy that you liked our app and supporting it.</string>
    <string name="payment_success_positive_btn">Awesome</string>
</resources>