<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="ContentDescription"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<androidx.coordinatorlayout.widget.CoordinatorLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center_horizontal|center_vertical">
		<LinearLayout
			android:id="@+id/bsheetbehavior"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			app:layout_behavior="@string/bottom_sheet_behavior"
			app:behavior_hideable="true">
			<LinearLayout
				android:id="@+id/background"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="10dp"
				android:background="#FFFFFF"
				android:orientation="vertical"
				android:animateLayoutChanges="true"
				android:elevation="10dp"
				tools:ignore="UselessParent">
				<LinearLayout
					android:id="@+id/slider"
					android:layout_width="40dp"
					android:layout_height="5dp"
					android:layout_marginTop="16dp"
					android:background="#E0E0E0"
					android:orientation="horizontal"
					android:layout_gravity="center_horizontal" />
				<TextView
					android:id="@+id/title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="6dp"
					android:layout_marginRight="10dp"
					android:padding="8dp"
					android:text="@string/settings_title"
					android:textSize="30sp"
					android:textColor="#000000" />
				<TextView
					android:id="@+id/textview4"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:paddingLeft="8dp"
					android:paddingRight="8dp"
					android:paddingBottom="8dp"
					android:text="@string/settings_subtitle"
					android:textSize="14sp"
					android:textColor="#616161" />
				<LinearLayout
					android:id="@+id/line"
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginLeft="15dp"
					android:layout_marginTop="10dp"
					android:layout_marginRight="15dp"
					android:background="#E0E0E0"
					android:orientation="horizontal" />
				<androidx.core.widget.NestedScrollView
					android:id="@+id/vscroll1"
					android:layout_width="match_parent"
					android:layout_height="match_parent">
					<LinearLayout
						android:id="@+id/linear3"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="10dp"
						android:paddingRight="10dp"
						android:orientation="vertical">
						<TextView
							android:id="@+id/textview7"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="15dp"
							android:padding="8dp"
							android:text="@string/settings_section_1_title"
							android:textSize="12sp"
							android:textColor="#616161" />
						<LinearLayout
							android:id="@+id/setting1"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="10dp"
							android:paddingLeft="5dp"
							android:paddingRight="5dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">
							<ImageView
								android:id="@+id/imageview1"
								android:layout_width="30dp"
								android:layout_height="25dp"
								android:src="@drawable/twotone_cloud_download_black_48dp"
								android:scaleType="fitCenter"
								app:tint="#4CAF50" />
							<LinearLayout
								android:id="@+id/linear4"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="4dp"
								android:paddingRight="2dp"
								android:paddingBottom="4dp"
								android:orientation="vertical">
								<TextView
									android:id="@+id/textview5"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="8dp"
									android:paddingRight="8dp"
									android:paddingBottom="2dp"
									android:text="@string/settings_option_1_title"
									android:textSize="14sp"
									android:textColor="#212121" />
								<TextView
									android:id="@+id/textview6"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="2dp"
									android:paddingRight="8dp"
									android:paddingBottom="8dp"
									android:text="@string/settings_option_1_subtitle"
									android:textSize="12sp"
									android:textColor="#616161" />
							</LinearLayout>
						</LinearLayout>
						<LinearLayout
							android:id="@+id/setting3"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="10dp"
							android:paddingLeft="5dp"
							android:paddingRight="5dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">
							<ImageView
								android:id="@+id/imageview3"
								android:layout_width="30dp"
								android:layout_height="25dp"
								android:src="@drawable/twotone_backup_black_48dp"
								android:scaleType="fitCenter"
								app:tint="#2196F3" />
							<LinearLayout
								android:id="@+id/linear9"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="4dp"
								android:paddingRight="2dp"
								android:paddingBottom="4dp"
								android:orientation="vertical">
								<TextView
									android:id="@+id/textview10"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="8dp"
									android:paddingRight="8dp"
									android:paddingBottom="2dp"
									android:text="@string/settings_option_2_title"
									android:textSize="14sp"
									android:textColor="#212121" />
								<TextView
									android:id="@+id/textview11"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="2dp"
									android:paddingRight="8dp"
									android:paddingBottom="8dp"
									android:text="@string/settings_option_2_subtitle"
									android:textSize="12sp"
									android:textColor="#616161" />
							</LinearLayout>
						</LinearLayout>
						<LinearLayout
							android:id="@+id/setting2"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="10dp"
							android:paddingLeft="5dp"
							android:paddingRight="5dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">
							<ImageView
								android:id="@+id/imageview2"
								android:layout_width="30dp"
								android:layout_height="25dp"
								android:src="@drawable/twotone_delete_black_48dp"
								android:scaleType="fitCenter"
								app:tint="#3E2723" />
							<LinearLayout
								android:id="@+id/linear7"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="4dp"
								android:paddingRight="2dp"
								android:paddingBottom="4dp"
								android:orientation="vertical">
								<TextView
									android:id="@+id/textview8"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="8dp"
									android:paddingRight="8dp"
									android:paddingBottom="2dp"
									android:text="@string/settings_option_3_title"
									android:textSize="14sp"
									android:textColor="#212121" />
								<TextView
									android:id="@+id/textview9"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="2dp"
									android:paddingRight="8dp"
									android:paddingBottom="8dp"
									android:text="@string/settings_option_3_subtitle"
									android:textSize="12sp"
									android:textColor="#616161" />
							</LinearLayout>
						</LinearLayout>
						<LinearLayout
							android:id="@+id/line1"
							android:layout_width="match_parent"
							android:layout_height="1dp"
							android:layout_marginTop="20dp"
							android:background="#E0E0E0"
							android:orientation="horizontal" />
						<TextView
							android:id="@+id/textview12"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="15dp"
							android:padding="8dp"
							android:text="@string/settings_section_2_title"
							android:textSize="12sp"
							android:textColor="#616161" />
						<LinearLayout
							android:id="@+id/setting4"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="10dp"
							android:paddingLeft="5dp"
							android:paddingRight="5dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">
							<ImageView
								android:id="@+id/imageview4"
								android:layout_width="30dp"
								android:layout_height="25dp"
								android:src="@drawable/twotone_support_black_48dp"
								android:scaleType="fitCenter"
								app:tint="#3E64FF" />
							<LinearLayout
								android:id="@+id/linear11"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="4dp"
								android:paddingRight="2dp"
								android:paddingBottom="4dp"
								android:orientation="vertical">
								<TextView
									android:id="@+id/textview13"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="8dp"
									android:paddingRight="8dp"
									android:paddingBottom="2dp"
									android:text="@string/settings_option_4_title"
									android:textSize="14sp"
									android:textColor="#212121" />
								<TextView
									android:id="@+id/textview14"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="2dp"
									android:paddingRight="8dp"
									android:paddingBottom="8dp"
									android:text="@string/settings_option_4_subtitle"
									android:textSize="12sp"
									android:textColor="#616161" />
							</LinearLayout>
						</LinearLayout>
						<LinearLayout
							android:id="@+id/setting5"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="10dp"
							android:paddingLeft="5dp"
							android:paddingRight="5dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">
							<ImageView
								android:id="@+id/imageview5"
								android:layout_width="30dp"
								android:layout_height="25dp"
								android:src="@drawable/twotone_feedback_black_48dp"
								android:scaleType="fitCenter"
								app:tint="#F44336" />
							<LinearLayout
								android:id="@+id/linear13"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="4dp"
								android:paddingRight="2dp"
								android:paddingBottom="4dp"
								android:orientation="vertical">
								<TextView
									android:id="@+id/textview15"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="8dp"
									android:paddingRight="8dp"
									android:paddingBottom="2dp"
									android:text="@string/settings_option_5_title"
									android:textSize="14sp"
									android:textColor="#212121" />
								<TextView
									android:id="@+id/textview16"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="2dp"
									android:paddingRight="8dp"
									android:paddingBottom="8dp"
									android:text="@string/settings_option_5_subtitle"
									android:textSize="12sp"
									android:textColor="#616161" />
							</LinearLayout>
						</LinearLayout>
						<LinearLayout
							android:id="@+id/setting8"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="10dp"
							android:paddingLeft="5dp"
							android:paddingRight="5dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">
							<ImageView
								android:id="@+id/imageview6"
								android:layout_width="30dp"
								android:layout_height="25dp"
								android:src="@drawable/logo_min"
								android:scaleType="fitCenter"
								app:tint="#FFC107" />
							<LinearLayout
								android:id="@+id/linear16"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="4dp"
								android:paddingRight="2dp"
								android:paddingBottom="4dp"
								android:orientation="vertical">
								<TextView
									android:id="@+id/textview18"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="8dp"
									android:paddingRight="8dp"
									android:paddingBottom="2dp"
									android:text="@string/settings_option_6_title"
									android:textSize="14sp"
									android:textColor="#212121" />
								<TextView
									android:id="@+id/textview19"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="2dp"
									android:paddingRight="8dp"
									android:paddingBottom="8dp"
									android:text="@string/settings_option_6_subtitle"
									android:textSize="12sp"
									android:textColor="#616161" />
							</LinearLayout>
						</LinearLayout>
						<LinearLayout
							android:id="@+id/line2"
							android:layout_width="match_parent"
							android:layout_height="1dp"
							android:layout_marginTop="20dp"
							android:background="#E0E0E0"
							android:orientation="horizontal" />
						<TextView
							android:id="@+id/textview17"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="15dp"
							android:padding="8dp"
							android:text="@string/settings_section_3_title"
							android:textSize="12sp"
							android:textColor="#616161" />
						<LinearLayout
							android:id="@+id/setting6"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="10dp"
							android:paddingLeft="5dp"
							android:paddingRight="5dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">
							<ImageView
								android:id="@+id/imageview7"
								android:layout_width="30dp"
								android:layout_height="25dp"
								android:src="@drawable/twotone_copyright_black_48dp"
								android:scaleType="fitCenter"
								app:tint="#795548" />
							<LinearLayout
								android:id="@+id/linear18"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="4dp"
								android:paddingRight="2dp"
								android:paddingBottom="4dp"
								android:orientation="vertical">
								<TextView
									android:id="@+id/textview20"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="8dp"
									android:paddingRight="8dp"
									android:paddingBottom="2dp"
									android:text="@string/settings_option_7_title"
									android:textSize="14sp"
									android:textColor="#212121" />
								<TextView
									android:id="@+id/textview21"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="2dp"
									android:paddingRight="8dp"
									android:paddingBottom="8dp"
									android:text="@string/settings_option_7_subtitle"
									android:textSize="12sp"
									android:textColor="#616161" />
							</LinearLayout>
						</LinearLayout>
						<LinearLayout
							android:id="@+id/setting7"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="10dp"
							android:layout_marginBottom="60dp"
							android:paddingLeft="5dp"
							android:paddingRight="5dp"
							android:gravity="center_vertical"
							android:orientation="horizontal">
							<ImageView
								android:id="@+id/imageview8"
								android:layout_width="30dp"
								android:layout_height="25dp"
								android:src="@drawable/twotone_sentiment_satisfied_alt_black_48dp"
								android:scaleType="fitCenter"
								app:tint="#E91E63" />
							<LinearLayout
								android:id="@+id/linear20"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="4dp"
								android:paddingRight="2dp"
								android:paddingBottom="4dp"
								android:orientation="vertical">
								<TextView
									android:id="@+id/textview22"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="8dp"
									android:paddingRight="8dp"
									android:paddingBottom="2dp"
									android:text="@string/settings_option_8_title"
									android:textSize="14sp"
									android:textColor="#212121" />
								<TextView
									android:id="@+id/textview23"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:paddingLeft="8dp"
									android:paddingTop="2dp"
									android:paddingRight="8dp"
									android:paddingBottom="8dp"
									android:text="@string/settings_option_8_subtitle"
									android:textSize="12sp"
									android:textColor="#616161" />
							</LinearLayout>
						</LinearLayout>
					</LinearLayout>
				</androidx.core.widget.NestedScrollView>
			</LinearLayout>
		</LinearLayout>
	</androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
