<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<LinearLayout
		android:id="@+id/infosheet_back"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="12dp"
		android:background="#FFFFFF"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/slider"
			android:layout_width="40dp"
			android:layout_height="5dp"
			android:background="#E0E0E0"
			android:orientation="horizontal" />
		<ImageView
			android:id="@+id/image"
			android:focusable="false"
			android:layout_width="match_parent"
			android:layout_height="230dp"
			android:layout_marginTop="20dp"
			android:padding="40dp"
			android:src="@drawable/smiley_face_flatline"
			android:scaleType="centerCrop" />
		<TextView
			android:id="@+id/infosheet_title"
			android:focusable="false"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/animated_emojis_warning_title"
			android:textSize="18sp"
			android:textColor="#7289DA" />
		<TextView
			android:id="@+id/infosheet_sub"
			android:focusable="false"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="15dp"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/animated_emojis_warning_subtitle"
			android:textSize="16sp"
			android:textColor="#757575" />
		<LinearLayout
			android:id="@+id/infosheet_btnsholder"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="7dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/infosheet_cancel"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="4dp"
				android:layout_marginBottom="8dp"
				android:paddingLeft="8dp"
				android:paddingTop="10dp"
				android:paddingRight="8dp"
				android:paddingBottom="10dp"
				android:background="#F44336"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/animated_emojis_warning_btncancel"
				android:textSize="14sp"
				android:textColor="#FFFFFF"
				android:layout_weight="1" />
			<TextView
				android:id="@+id/infosheet_ok"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginBottom="8dp"
				android:paddingLeft="8dp"
				android:paddingTop="10dp"
				android:paddingRight="8dp"
				android:paddingBottom="10dp"
				android:background="#7289DA"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/animated_emojis_warning_btnok"
				android:textSize="14sp"
				android:textColor="#FFFFFF"
				android:singleLine="true"
				android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
